--- a/conf/config.ini
+++ b/conf/config.ini
@@ -3,7 +3,7 @@ release = false
 
 [mysql]
 user = root
-password = root1234
+password = r12345678
 host = 127.0.0.1
-port = 23306
+port = 3306
 db = bubble
